syntax="proto2";

package raft;
option java_package = "com.github.marstalk.raft.proto";
option java_outer_classname = "RaftProto";

// public
enum ResCode {
    RES_CODE_SUCCESS = 0;
    RES_CODE_FAIL = 1;
    RES_CODE_NOT_LEADER = 2;
}

// meta data
message Metadata{
    optional uint32 current_term = 1;
    optional uint64 first_log_index = 2;
    optional uint64 last_commit_index = 3;
    optional uint32 vote_for = 4;
}

// vote rpc
message VoteRequest{
    optional uint32 server_id = 1;
    optional uint64 term = 2;
    optional uint64 last_log_term = 3;
    optional uint64 last_log_index = 4;
}
message VoteResponse{
    optional uint64 term =1;
    optional bool granted = 2;
}



// appendEntries rpc
enum EntryType {
    ENTRY_TYPE_DATA = 0;
    ENTRY_TYPE_CONFIGURATION = 1;
}
message LogEntry {
    optional uint64 term = 1;
    optional uint64 index = 2;
    optional EntryType type = 3;
    optional bytes data = 4;
}
message AppendEntriesRequest{
    optional uint32 server_id = 1;
    optional uint64 term = 2;
    optional uint64 pre_log_index = 3;
    optional uint64 pre_log_term = 4;
    optional uint64 commit_index = 5;
    optional LogEntry entries = 6;
}
message AppendEntriesResponse{
    optional ResCode res_code = 1;
    optional uint64 term = 2;
    optional uint64 last_log_index = 3;
}
service ConsensusService{
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
}